# fast-feedback-indexer

./: .gitignore  BIBTeX.bib  BUILD_FOR_CRYSTFEL.md  CMakeList.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CrystFEL.md  LICENSE.md  README.md  SECURITY.md  archive.sh  component-version.sh  meson.build  meson.options  pythonlib.sh  set-version.sh  setup-env.sh.in
conda/: build.sh  meta.yaml  recipe.yaml  set-version.sh
data/: CMakeList.txt  CMakeLists.txt
data/simple/: CMakeLists.txt  README.md  image0_local.txt  image0_peakfinder8.txt  image0_radial.txt  image1_local.txt  image1_radial.txt  image2_local.txt  image3_peakfinder8.txt  image3_radial.txt  image4_peakfinder8.txt  image5_peakfinder8.txt  image6_radial.txt  image7_local.txt  image7_radial.txt  image9_peakfinder8.txt  meson.build  test0.txt  test1.txt
data/simple/files/: image1_peakfinder8.txt  image2_peakfinder8.txt  image2_radial.txt  image3_local.txt  image4_local.txt  image4_radial.txt  image5_local.txt  image5_radial.txt  image6_local.txt  image6_peakfinder8.txt  image7_peakfinder8.txt  image8_local.txt  image8_peakfinder8.txt  image8_radial.txt  image9_local.txt  image9_radial.txt  test2.txt
data/simple/reader/: CMakeLists.txt
data/simple/reader/include/: CMakeLists.txt  simple_data.h
data/simple/reader/src/: CMakeLists.txt  meson.build  set-version.sh  simple_data.h  simple_data.pc.in
data/simple/reader/src/ffbidx/: simple_data.h
doc/algorithm/: bibliography.bib  fast-feedback-indexer.tex
doc/api/: bibliography.bib  ffbi-api.tex
doc/code/: Makefile  convenience-api.cpp  python-api.py  raw-api.cpp
examples/c-api-test/: .gitignore  Makefile  c-api-test.c
examples/cpp-simple-data-bulk-indexer/: .gitignore  CMakeLists.txt  Makefile  README.md  meson.build  simple-data-bulk-indexer.cpp
examples/crystfel-integration/: .gitignore  CMakeLists.txt  Makefile  README.md  c-wrapper.cpp  c-wrapper.h  fast_indexer_crystfel.pc.in  simple-data-test.c
examples/crystfel-integration/ffbidx/: c-wrapper.h
examples/python-simple-data-indexing/: SimpleDataIndexing.ipynb
examples/simple-data-bulk-indexer/: simple-data-bulk-indexer.cpp
indexer/: CMakeLists.txt  README.md
indexer/src/: CMakeLists.txt  GenerateVersionH.cmake  c_api.cpp  exception.h  fast_indexer.pc.in  fast_indexer_static.pc.in  indexer.cpp  indexer.h  indexer_gpu.cu  indexer_gpu.h  indexer_gpu.hip.cpp  log.cc  log.cpp  log.h  meson.build  refine.h  set-version.sh  version.h.in
indexer/src/ffbidx/: c_api.h  envvar.h  exception.h  indexer.h  indexer_gpu.h  log.h  meson.build  refine.h
indexer/test/simple_data_reader/: CMakeLists.txt
python/: CMakeLists.txt  README.md
python/src/: CMakeLists.txt  __init__.py  ffbidx_cl.py  ffbidx_impl.cpp  meson.build  python_module.cpp  set-version.sh
spack/: repo.yaml
test/simple_data_reader/: CMakeLists.txt
tests/: CMakeLists.txt  README.md
tests/src/: CMakeLists.txt  meson.build  refined_simple_data_indexer.cpp  simple_data_indexer.cpp  simple_data_test.cpp  test_capi.cpp  test_indexer.cpp  test_indexer_exception.cpp  test_indexer_obj.cpp
