# Compile options, can be set to 'ignore'
option('cpu-arch', type: 'string', value: 'ignore')
option('gpu-arch', type: 'string', value: 'ignore')

# Eigen include directory, can be set to 'ignore'
# If this doesn't have the 'Eigen' subdirectory,
# pkg-config will be tried to find Eigen
option('eigen-source-dir', type: 'string', value: 'ignore')

# Build fast indexer library
option('build-ffbidx', type: 'feature', value: 'enabled')
option('include-c-api', type: 'feature', value: 'enabled')
option('include-python-api', type: 'feature', value: 'disabled')

# Build the toy simple data indexers
option('build-simple-indexers', type: 'feature', value: 'disabled')

# Install the simple data files and header only reader library
option('install-simple-data-files', type: 'feature', value: 'disabled')
option('install-simple-data-reader', type: 'feature', value: 'disabled')

# Build the test executables for enabled features
option('build-tests', type: 'feature', value: 'disabled')
